[package]
name = "solbond"
version = "0.1.0"
authors = ["Araekiel <kumarshashwatsri@gmail.com>"]
repository = "https://github.com/Araekiel/solbond"
edition = "2018"

[lib]
name = "solbond"
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "1.7.11"
thiserror = "1.0.28"
arrayref = "0.3.2"

[features]
exclude_entrypoint = []


